--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
             </Div>
             <Div class="Product producto-filtrable" id="2">
                 <img src="./Resources/MESA CENTRO/Mesa-de-centroP.JPG" alt="Sample">
-                <p>Mesa de centro rustica</p>
+                <p>Mesa de centro rústica</p>
             </Div>
             <Div class="Product producto-filtrable" id="3">
                 <img src="./Resources/MESA DE UN TABLON/M1TP.JPG" alt="Sample">
-                <p>Mesa rustica de un tablon</p>
+                <p>Mesa rústica de un tablón</p>
             </Div>
             <Div class="Product producto-filtrable" id="4">
                 <img src="./Resources/MESA DE DOS TABLONES/M2TP.JPG" alt="Sample">
-                <p>Mesa rustica de dos tablones</p>
+                <p>Mesa rústica de dos tablones</p>
             </Div>
             <Div class="Product producto-filtrable" id="5"> 
-                <img src="./Resources/BAR/BarP.jpg" alt="Sample">
-                <p>Bar rustico</p>
+                <img src="./Resources/BAR/20201219_181113.jpg" alt="Sample">
+                <p>Bar</p>
             </Div>
             <Div class="Product producto-filtrable" id="6">
                 <img src="./Resources/SALA/SP.JPG" alt="Sample">
@@ -48,24 +48,24 @@
             Mejores Vendidos
         </H2>
         <Div class="Products2">
-            <Div class="Product2 producto-filtrable"  id="2">
+            <Div class="Product2 producto-filtrable"  id="4">
                 <img src="./Resources/MESA DE DOS TABLONES/M2T4.JPG" alt="Sample">
-                <p>Mesa rustica de dos tablones</p>
+                <p>Mesa rústica de dos tablones</p>
             </Div>
-            <Div class="Product2 producto-filtrable2"  id="7">
-                <img src="./Resources/BANCOS/20190607_133230.jpg" alt="Sample">
-                <p>Banca</p>
+            <Div class="Product2 producto-filtrable"  id="7">
+                <img src="./Resources/BANCOS/BancoP.jpg" alt="Sample">
+                <p>Bancos</p>
             </Div>
             <Div class="Product2 producto-filtrable" id="8">
                 <img src="./Resources/TUMBONA/TP.JPG" alt="Sample" >
                 <p>Tumbonas</p>
             </Div>            
-            <Div class="Product2 producto-filtrable" id="9">
-            <img src="./Resources/CAMAS/Cama-King-sizeP.jpg" alt="Sample">
+            <Div class="Product2 producto-filtrable cama" id="9">
+            <img src="./Resources/CAMAS/CP.jpg" alt="Sample">
                 <p>Camas</p>
             </Div>
-            <Div class="Product2 producto-filtrable" id="10">
-                <img src="./Resources/BUTACA/ButacaP.jpg" alt="Sample">
+            <Div class="Product2 producto-filtrable Butaca" id="10">
+                <img src="./Resources/BUTACA/BP.jpg" alt="Sample">
                 <p>Butaca</p>
             </Div>
             <Div class="Product2 producto-filtrable" id="11">
@@ -79,6 +79,14 @@
             <Div class="Product2 producto-filtrable" id="13">
                 <img src="./Resources/PAJARERA/PajareraP.JPG" alt="Sample">
                 <p>Pajarera</p>
+            </Div>
+            <Div class="Product2 producto-filtrable" id="14">
+                <img src="./Resources/Buro/BP.jpg" alt="Sample">
+                <p>Buros</p>
+            </Div>
+            <Div class="Product2 producto-filtrable" id="15">
+                <img src="./Resources/Mesa de Protocolo/MPP.jpg" alt="Sample">
+                <p>Mesa de protocolo</p>
             </Div>
         </Div>
         <footer>
@@ -104,7 +112,7 @@
                 </div>
                 <div class="enlace">
                     <a href="./Terminos y Condiciones.HTML">Terminos y Condiciones</a>
-                    <a href="./Preguntas frecuentes">Preguntas Frecuentes</a>
+                    <a href="./Preguntas Frecuentes.html">Preguntas Frecuentes</a>
                 </div>
 
         </footer>
