--- a/producto11.html
+++ b/producto11.html
@@ -17,15 +17,15 @@
             <img src="./Resources/PORTON/P3.JPG" alt="" class="img3">
             <img src="./Resources/PORTON/P4.JPG" alt="" class="img4">
             <img src="./Resources/PORTON/P5.JPG" alt="" class="img5">
-            <button class="anterior">←</button>
-            <button class="siguiente">→</button>
+            <button class="anterior"><</button>
+            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
                 Porton
             </h1>
             <p>
-                Porton hecho de madera preciosa elegida por el cliente entre Cedro caoba algarrobo pino y fresno, personalizable, para mas informacion contactar a uno de nuestros comerciales
+                Porton; hechos de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
             <h2>contactanos</h2>
             <div class="Redes">
