--- a/producto15.html
+++ b/producto15.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bancos</title>
+    <title>Sillas</title>
     <link rel="icon" href="./Resources/icons/Logo.png">
     <link rel="stylesheet" href="./css/Products.css">
     <script src="./Js/Products.js"></script>
@@ -12,21 +12,19 @@
 <body>
     <div class="Main">
         <div class="carrusel">
-            <img src="./Resources/BANCOS/BancoP.jpg" alt="" class="img1 activa">
-            <img src="./Resources/BANCOS/Imagen de WhatsApp 2024-03-05 a las 10.06.00_c4f365b1.jpg" alt="" class="img2">
-            <img src="./Resources/BANCOS/20190607_133230.jpg" alt="" class="img3">
-            <img src="./Resources/BANCOS/20190607_133245.jpg" alt="" class="img4">
-            <img src="./Resources/BANCOS/B2.jpg" alt="" class="img5">
-            <img src="./Resources/BANCOS/B3.jpg" alt="" class="img6">
+            <img src="./Resources/Mesa de Protocolo/MPP.jpg" alt="" class="img1 activa">
+            <img src="./Resources/Mesa de Protocolo/MP3.jpg" alt="" class="img2">
+            <img src="./Resources/Mesa de Protocolo/MP3.jpg" alt="" class="img3">
+
             <button class="anterior"><</button>
             <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
-                Bancos
+                Mesa de Protocolo
             </h1>
             <p>
-                Bancos perfectos para adornar exteriores; hechos de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
+                Mesas de protocolo; hechos de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
             <h2>contactanos</h2>
             <div class="Redes">
