--- a/producto4.html
+++ b/producto4.html
@@ -18,15 +18,15 @@
             <img src="./Resources/MESA DE DOS TABLONES/M2T4.JPG" alt="" class="img4">
             <img src="./Resources/MESA DE DOS TABLONES/M2T5.JPG" alt="" class="img5">
             <img src="./Resources/MESA DE DOS TABLONES/M2T6.JPG" alt="" class="img6">
-            <button class="anterior">←</button>
-            <button class="siguiente">→</button>
+            <button class="anterior"><</button>
+            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
                 Mesa de dos tablones
             </h1>
             <p>
-                Una mesa de comedor o para reuniones, de dos tablones rustica hecha de madera preciosa elegida por el cliente entre Cedro caoba algarrobo pino y fresno, personalizable y con un set de 6 o 8 Sillas para mas informacion contactar a uno de nuestros comerciales
+                Una mesa para comedor rústica, de dos tablones. Puede ser producida para 4, 6, 8, o más pax; hechas de la madera preciosa Algarrobo, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
             <h2>contactanos</h2>
             <div class="Redes">
