--- a/producto5.html
+++ b/producto5.html
@@ -12,18 +12,18 @@
 <body>
     <div class="Main">
         <div class="carrusel">
-            <img src="./Resources/BAR/BarP.jpg" alt="" class="img1 activa">
-            <img src="./Resources/BAR/20190607_133658.jpg" alt="" class="img2">
-            <img src="./Resources/BAR/20201219_181113.jpg" alt="" class="img3">
-            <button class="anterior">←</button>
-            <button class="siguiente">→</button>
+            <img src="./Resources/BAR/BarP.jpg" alt="" class="img2">
+            <img src="./Resources/BAR/20190607_133658.jpg" alt="" class="img3">
+            <img src="./Resources/BAR/20201219_181113.jpg" alt="" class="img1 activa">
+            <button class="anterior"><</button>
+            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
-                BAr
+                Bar
             </h1>
             <p>
-                Un Bar rustico hecho de madera preciosa elegida por el cliente entre Cedro caoba algarrobo pino y fresno, personalizable, para mas informacion contactar a uno de nuestros comerciales
+                Un Bar, que puede ser rústico o no; hechos de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
             <h2>contactanos</h2>
             <div class="Redes">
