--- a/producto6.html
+++ b/producto6.html
@@ -19,16 +19,23 @@
             <img src="./Resources/SALA/S5.jpg" alt="" class="img5">
             <img src="./Resources/SALA/S6.jpg" alt="" class="img6">
             <img src="./Resources/SALA/S7.jpg" alt="" class="img7">
+            <img src="./Resources/SALA/S8.jpg" alt="" class="img8">
+            <img src="./Resources/SALA/S9.jpg" alt="" class="img9">
+            <img src="./Resources/SALA/S10.jpg" alt="" class="img10">
+            <img src="./Resources/SALA/S11.jpg" alt="" class="img11">
+            <img src="./Resources/SALA/S12.jpg" alt="" class="img12">
 
-            <button class="anterior">←</button>
-            <button class="siguiente">→</button>
+
+
+            <button class="anterior"><</button>
+            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
                 Juego de Sala
             </h1>
             <p>
-                Un juego de sala rustico hecho de madera preciosa elegida por el cliente entre Cedro caoba algarrobo pino y fresno y tapiceria elegida tambien por el cliente entre hilo, vinilo estilizado y poliester con algodon, para mas informacion contactar uno de nuestros comerciales
+                Un juego de sala; hechos de maderas preciosas y tejidos a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya; Yute, Lino, Vinilo y Microfibra. Personalizable a escoger por el cliente la cantidad de pax que desee, para mas informacion contactar a uno de nuestros comerciales.
             </p>
             <h2>contactanos</h2>
             <div class="Redes">
