--- a/producto1.html
+++ b/producto1.html
@@ -12,17 +12,19 @@
 <body>
     <div class="Main">
         <div class="carrusel">
-            <img src="./Resources/MESA/Mesa-simpleP.JPG" alt="" class="img1 activa">
+            <img src="./Resources/MESA/Mesa-simpleP.JPG" alt="" class="img1  activa">
             <img src="./Resources/MESA/Mesa simple2.JPG" alt="" class="img2">
-            <button class="anterior">←</button>
-            <button class="siguiente">→</button>
+            <img src="./Resources/MESA/MdTP.jpg" alt="" class="img3">
+
+            <button class="anterior"><</button>
+            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
-                Mesa simple
+                Mesa de terraza
             </h1>
             <p>
-                Una mesa simple hecha de madera  preciosa elegida por el cliente entre Cedro caoba algarrobo pino y fresno, personalizable y con un set de 4 Sillas para mas informacion contactar a uno de nuestros comerciales
+                Una mesa de terraza, viene con un set de 4 sillas; hechas de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
             <h2>contactanos</h2>
             <div class="Redes">
