--- a/producto10.html
+++ b/producto10.html
@@ -12,20 +12,20 @@
 <body>
     <div class="Main">
         <div class="carrusel">
-            <img src="./Resources/BUTACA/ButacaP.jpg" alt="" class="img1 activa">
+            <img src="./Resources/BUTACA/BP.jpg" alt="" class="img1 activa">
             <img src="./Resources/BUTACA/B2.jpg" alt="" class="img2">
             <img src="./Resources/BUTACA/B3.jpg" alt="" class="img3">
             <img src="./Resources/BUTACA/B4.jpg" alt="" class="img4">
             <img src="./Resources/BUTACA/B5.jpg" alt="" class="img5">
-            <button class="anterior">←</button>
-            <button class="siguiente">→</button>
+            <button class="anterior"><</button>
+            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
                 Butaca
             </h1>
             <p>
-                Butacas hechas de madera preciosa elegida por el cliente entre Cedro caoba algarrobo pino y fresno, personalizable, para mas informacion contactar a uno de nuestros comerciales
+                Butacas; hechos de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p> 
             <h2>contactanos</h2>
             <div class="Redes">
