--- a/producto12.html
+++ b/producto12.html
@@ -18,15 +18,15 @@
             <img src="./Resources/SILLA/S4.JPG" alt="" class="img4">
             <img src="./Resources/SILLA/S5.JPG" alt="" class="img5">
             <img src="./Resources/SILLA/S6.JPG" alt="" class="img6">
-            <button class="anterior">←</button>
-            <button class="siguiente">→</button>
+            <button class="anterior"><</button>
+            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
                 Sillas
             </h1>
             <p>
-                Sillas hechas de madera preciosa elegida por el cliente entre Cedro caoba algarrobo pino y fresno, personalizable, para mas informacion contactar a uno de nuestros comerciales
+                Sillas; hechos de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
             <h2>contactanos</h2>
             <div class="Redes">
