--- a/producto13.html
+++ b/producto13.html
@@ -18,15 +18,15 @@
             <img src="./Resources/PAJARERA/P4.JPG" alt="" class="img4">
             <img src="./Resources/PAJARERA/P5.JPG" alt="" class="img5">
             <img src="./Resources/PAJARERA/P6.JPG" alt="" class="img6">
-            <button class="anterior">←</button>
-            <button class="siguiente">→</button>
+            <button class="anterior"><</button>
+            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
                 Pajarera
             </h1>
             <p>
-                Una Pajarera hecha de madera preciosa elegida por el cliente entre Cedro caoba algarrobo pino y fresno, personalizable, para mas informacion contactar a uno de nuestros comerciales
+                Una Pajarera; hechos de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
             <h2>contactanos</h2>
             <div class="Redes">
