--- a/producto2.html
+++ b/producto2.html
@@ -20,15 +20,16 @@
             <img src="./Resources/MESA CENTRO/MC6.JPG" alt="" class="img6">
             <img src="./Resources/MESA CENTRO/MC7.JPG" alt="" class="img7">
 
-            <button class="anterior">←</button>
-            <button class="siguiente">→</button>
+            <button class="anterior"><</button>
+            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
                 Mesa De centro
             </h1>
             <p>
-                Una mesa de centro rustica Una mesa de centro hecha de madera preciosa elegida por el cliente entre Cedro caoba algarrobo pino y fresno, personalizable, para mas informacion contactar a uno de nuestros comerciales
+                Una mesa de centro rústica; hechas de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
+
             </p>
             <h2>contactanos</h2>
             <div class="Redes">
