--- a/producto3.html
+++ b/producto3.html
@@ -12,20 +12,19 @@
 <body>
     <div class="Main">
         <div class="carrusel">
-            <img src="./Resources/MESA DE UN TABLON/M1TP.JPG" alt="" class="img1 activa">
+            <img src="./Resources/MESA DE UN TABLON/M1TP.jpg" alt="" class="img1 activa">
             <img src="./Resources/MESA DE UN TABLON/M1T2.jpg" alt="" class="img2">
             <img src="./Resources/MESA DE UN TABLON/M1T3.jpg" alt="" class="img3">
-            <img src="./Resources/MESA DE UN TABLON/M1T4.jpg" alt="" class="img4">
             <img src="./Resources/MESA DE UN TABLON/M1T5.jpg" alt="" class="img5">
-            <button class="anterior">anterior</button>
-            <button class="siguiente">siguiente</button>
+            <button class="anterior"><</button>
+            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
                 Mesa de un tablon
             </h1>
-            <p>Una mesa de comedor de un tablon rustica hecha de madera preciosa elegida por el cliente entre Cedro caoba algarrobo pino y fresno, personalizable y con un set de 4 6 o 8 Sillas para mas informacion contactar a uno de nuestros comerciales
-                
+            <p>
+                Una mesa de comedor de un tablon rústica, viene con un set de 4, 6 o 8 sillas; hechas de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
             <h2>contactanos</h2>
             <div class="Redes">
