--- a/producto8.html
+++ b/producto8.html
@@ -18,15 +18,15 @@
             <img src="./Resources/TUMBONA/T2 (2).JPG" alt="" class="img4">
             <img src="./Resources/TUMBONA/T2 (3).jpg" alt="" class="img5">
             <img src="./Resources/TUMBONA/T3.JPG" alt="" class="img6">
-            <button class="anterior">←</button>
-            <button class="siguiente">→</button>
+            <button class="anterior"><</button>
+            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
                 Tumbonas
             </h1>
             <p>
-                Tumbonas hechas hechas de madera preciosa elegida por el cliente entre Cedro caoba algarrobo pino y fresno, personalizable, para mas informacion contactar a uno de nuestros comerciales
+                Tumbonas ; hechos de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
             <h2>contactanos</h2>
             <div class="Redes">
