--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </H2>
                 <p>En Carpintería Atono, nuestra pasión por la madera se traduce en la creación de muebles y objetos únicos que transforman espacios en lugares cálidos y llenos de vida.</p>
                 <p>Desde hace mas de media decada, combinamos la experiencia artesanal con la tecnología moderna para ofrecer a nuestros clientes productos de la más alta calidad.</p>
-                <p  class="TP"><b>Nos especializamos en:</b></p>
+                <h2><b>Nos especializamos en:</b></h2>
                 <p  class="TP"><b>Muebles a medida:</b></p><p>Diseñamos y fabricamos muebles personalizados para satisfacer las necesidades de cada cliente.</p> <br>
                 <p  class="TP"><b>Carpintería general:</b></p><p>Ofrecemos una amplia gama de servicios de carpintería, desde la instalación de puertas y ventanas hasta la reparación de muebles.</p> <br>
                 <p class="TP"><b>Restauración de muebles:</b></p><p>Damos nueva vida a muebles antiguos con técnicas de restauración tradicionales y modernas.</p>
