--- a/producto1.html
+++ b/producto1.html
@@ -11,22 +11,22 @@
 </head>
 <body>
     <div class="Main">
+        <div class="header">
+            <button class="home" id="home"><img src="./Resources/icons/icons8-back-50.png" alt=""></button>
+            <h1>Mesa de terraza</h1>
+        </div>
         <div class="carrusel">
-            <img src="./Resources/MESA/Mesa-simpleP.JPG" alt="" class="img1  activa">
+            <img src="./Resources/MESA/Mesa-simpleP.JPG" alt="" class="img1">
             <img src="./Resources/MESA/Mesa simple2.JPG" alt="" class="img2">
             <img src="./Resources/MESA/MdTP.jpg" alt="" class="img3">
-
-            <button class="anterior"><</button>
-            <button class="siguiente">></button>
         </div>
         <div class="Product">
-            <h1>
+            <h2>
                 Mesa de terraza
-            </h1>
+            </h2>
             <p>
                 Una mesa de terraza, viene con un set de 4 sillas; hechas de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
-            <h2>contactanos</h2>
             <div class="Redes">
                 <div class="whats">
                 <button class="wats">contactar por whatsApp</button>
@@ -34,6 +34,7 @@
                 <div class="instag">
                 <button class="insta">Ver nuestro instagram</button>
                 </div>
+                <h2>contactanos</h2>
             </div>
         </div>
 
