--- a/producto15.html
+++ b/producto15.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sillas</title>
+    <title>Mesa de Protocolo</title>
     <link rel="icon" href="./Resources/icons/Logo.png">
     <link rel="stylesheet" href="./css/Products.css">
     <script src="./Js/Products.js"></script>
@@ -11,13 +11,14 @@
 </head>
 <body>
     <div class="Main">
+        <div class="header">
+            <button class="home" id="home"><img src="./Resources/icons/icons8-back-50.png" alt=""></button>
+            <h1>Mesa de protocolo</h1>
+        </div>
         <div class="carrusel">
             <img src="./Resources/Mesa de Protocolo/MPP.jpg" alt="" class="img1 activa">
             <img src="./Resources/Mesa de Protocolo/MP3.jpg" alt="" class="img2">
-            <img src="./Resources/Mesa de Protocolo/MP3.jpg" alt="" class="img3">
-
-            <button class="anterior"><</button>
-            <button class="siguiente">></button>
+            <img src="./Resources/Mesa de Protocolo/MP2.jpg" alt="" class="img3">
         </div>
         <div class="Product">
             <h1>
@@ -26,7 +27,6 @@
             <p>
                 Mesas de protocolo; hechos de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
-            <h2>contactanos</h2>
             <div class="Redes">
                 <div class="whats">
                 <button class="wats">contactar por whatsApp</button>
@@ -34,6 +34,7 @@
                 <div class="instag">
                 <button class="insta">Ver nuestro instagram</button>
                 </div>
+                <h2>contactanos</h2>
             </div>
         </div>
 
