--- a/producto2.html
+++ b/producto2.html
@@ -11,17 +11,17 @@
 </head>
 <body>
     <div class="Main">
+        <div class="header">
+            <button class="home" id="home"><img src="./Resources/icons/icons8-back-50.png" alt=""></button>
+            <h1>Mesa de centro</h1>
+        </div>
         <div class="carrusel">
             <img src="./Resources/MESA CENTRO/Mesa-de-centroP.JPG" alt="" class="img1 activa">
-            <img src="./Resources/MESA CENTRO/MC2.JPG" alt="" class="img2">
             <img src="./Resources/MESA CENTRO/MC3.JPG" alt="" class="img3">
             <img src="./Resources/MESA CENTRO/MC4.JPG" alt="" class="img4">
             <img src="./Resources/MESA CENTRO/MC5.JPG" alt="" class="img5">
             <img src="./Resources/MESA CENTRO/MC6.JPG" alt="" class="img6">
             <img src="./Resources/MESA CENTRO/MC7.JPG" alt="" class="img7">
-
-            <button class="anterior"><</button>
-            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
@@ -31,7 +31,6 @@
                 Una mesa de centro rústica; hechas de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
 
             </p>
-            <h2>contactanos</h2>
             <div class="Redes">
                 <div class="whats">
                 <button class="wats">contactar por whatsApp</button>
@@ -39,6 +38,7 @@
                 <div class="instag">
                 <button class="insta">Ver nuestro instagram</button>
                 </div>
+                <h2>contactanos</h2>
             </div>
         </div>
 
