--- a/producto3.html
+++ b/producto3.html
@@ -11,13 +11,15 @@
 </head>
 <body>
     <div class="Main">
+        <div class="header">
+            <button class="home" id="home"><img src="./Resources/icons/icons8-back-50.png" alt=""></button>
+            <h1>Mesa de un tablón</h1>
+        </div>
         <div class="carrusel">
             <img src="./Resources/MESA DE UN TABLON/M1TP.jpg" alt="" class="img1 activa">
             <img src="./Resources/MESA DE UN TABLON/M1T2.jpg" alt="" class="img2">
             <img src="./Resources/MESA DE UN TABLON/M1T3.jpg" alt="" class="img3">
             <img src="./Resources/MESA DE UN TABLON/M1T5.jpg" alt="" class="img5">
-            <button class="anterior"><</button>
-            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
@@ -26,7 +28,6 @@
             <p>
                 Una mesa de comedor de un tablon rústica, viene con un set de 4, 6 o 8 sillas; hechas de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
-            <h2>contactanos</h2>
             <div class="Redes">
                 <div class="whats">
                 <button class="wats">contactar por whatsApp</button>
@@ -34,6 +35,7 @@
                 <div class="instag">
                 <button class="insta">Ver nuestro instagram</button>
                 </div>
+                <h2>contactanos</h2>
             </div>
         </div>
 
