--- a/producto5.html
+++ b/producto5.html
@@ -11,12 +11,14 @@
 </head>
 <body>
     <div class="Main">
+        <div class="header">
+            <button class="home" id="home"><img src="./Resources/icons/icons8-back-50.png" alt=""></button>
+            <h1>Bar</h1>
+        </div>
         <div class="carrusel">
             <img src="./Resources/BAR/BarP.jpg" alt="" class="img2">
             <img src="./Resources/BAR/20190607_133658.jpg" alt="" class="img3">
             <img src="./Resources/BAR/20201219_181113.jpg" alt="" class="img1 activa">
-            <button class="anterior"><</button>
-            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
@@ -25,7 +27,6 @@
             <p>
                 Un Bar, que puede ser rústico o no; hechos de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
-            <h2>contactanos</h2>
             <div class="Redes">
                 <div class="whats">
                 <button class="wats">contactar por whatsApp</button>
@@ -33,6 +34,7 @@
                 <div class="instag">
                 <button class="insta">Ver nuestro instagram</button>
                 </div>
+                <h2>contactanos</h2>
             </div>
         </div>
 
