--- a/producto6.html
+++ b/producto6.html
@@ -11,6 +11,10 @@
 </head>
 <body>
     <div class="Main">
+        <div class="header">
+            <button class="home" id="home"><img src="./Resources/icons/icons8-back-50.png" alt=""></button>
+            <h1>Juego de Sala</h1>
+        </div>
         <div class="carrusel">
             <img src="./Resources/SALA/SP.JPG" alt="" class="img1 activa">
             <img src="./Resources/SALA/S2.jpg" alt="" class="img2">
@@ -24,11 +28,6 @@
             <img src="./Resources/SALA/S10.jpg" alt="" class="img10">
             <img src="./Resources/SALA/S11.jpg" alt="" class="img11">
             <img src="./Resources/SALA/S12.jpg" alt="" class="img12">
-
-
-
-            <button class="anterior"><</button>
-            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
@@ -37,7 +36,6 @@
             <p>
                 Un juego de sala; hechos de maderas preciosas y tejidos a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya; Yute, Lino, Vinilo y Microfibra. Personalizable a escoger por el cliente la cantidad de pax que desee, para mas informacion contactar a uno de nuestros comerciales.
             </p>
-            <h2>contactanos</h2>
             <div class="Redes">
                 <div class="whats">
                 <button class="wats">contactar por whatsApp</button>
@@ -45,6 +43,7 @@
                 <div class="instag">
                 <button class="insta">Ver nuestro instagram</button>
                 </div>
+                <h2>contactanos</h2>
             </div>
         </div>
 
