--- a/producto7.html
+++ b/producto7.html
@@ -11,6 +11,10 @@
 </head>
 <body>
     <div class="Main">
+        <div class="header">
+            <button class="home" id="home"><img src="./Resources/icons/icons8-back-50.png" alt=""></button>
+            <h1>Bancos</h1>
+        </div>
         <div class="carrusel">
             <img src="./Resources/BANCOS/BancoP.jpg" alt="" class="img1 activa">
             <img src="./Resources/BANCOS/Imagen de WhatsApp 2024-03-05 a las 10.06.00_c4f365b1.jpg" alt="" class="img2">
@@ -18,8 +22,6 @@
             <img src="./Resources/BANCOS/20190607_133245.jpg" alt="" class="img4">
             <img src="./Resources/BANCOS/B2.jpg" alt="" class="img5">
             <img src="./Resources/BANCOS/B3.jpg" alt="" class="img6">
-            <button class="anterior"><</button>
-            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
@@ -28,7 +30,6 @@
             <p>
                 Bancos perfectos para adornar exteriores; hechos de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
-            <h2>contactanos</h2>
             <div class="Redes">
                 <div class="whats">
                 <button class="wats">contactar por whatsApp</button>
@@ -36,6 +37,7 @@
                 <div class="instag">
                 <button class="insta">Ver nuestro instagram</button>
                 </div>
+                <h2>contactanos</h2>
             </div>
         </div>
 
