--- a/producto10.html
+++ b/producto10.html
@@ -11,14 +11,16 @@
 </head>
 <body>
     <div class="Main">
+        <div class="header">
+            <button class="home" id="home"><img src="./Resources/icons/icons8-back-50.png" alt=""></button>
+            <h1>Butacas</h1>
+        </div>
         <div class="carrusel">
             <img src="./Resources/BUTACA/BP.jpg" alt="" class="img1 activa">
             <img src="./Resources/BUTACA/B2.jpg" alt="" class="img2">
             <img src="./Resources/BUTACA/B3.jpg" alt="" class="img3">
             <img src="./Resources/BUTACA/B4.jpg" alt="" class="img4">
             <img src="./Resources/BUTACA/B5.jpg" alt="" class="img5">
-            <button class="anterior"><</button>
-            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
@@ -27,7 +29,6 @@
             <p>
                 Butacas; hechos de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p> 
-            <h2>contactanos</h2>
             <div class="Redes">
                 <div class="whats">
                 <button class="wats">contactar por whatsApp</button>
@@ -35,6 +36,7 @@
                 <div class="instag">
                 <button class="insta">Ver nuestro instagram</button>
                 </div>
+                <h2>contactanos</h2>
             </div>
         </div>
 
