--- a/producto14.html
+++ b/producto14.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sillas</title>
+    <title>Buros</title>
     <link rel="icon" href="./Resources/icons/Logo.png">
     <link rel="stylesheet" href="./css/Products.css">
     <script src="./Js/Products.js"></script>
@@ -11,20 +11,21 @@
 </head>
 <body>
     <div class="Main">
+        <div class="header">
+            <button class="home" id="home"><img src="./Resources/icons/icons8-back-50.png" alt=""></button>
+            <h1>Buros</h1>
+        </div>
         <div class="carrusel">
             <img src="./Resources/Buro/BP.jpg" alt="" class="img1 activa">
             <img src="./Resources/Buro/B2.jpg" alt="" class="img2">
-            <button class="anterior"><</button>
-            <button class="siguiente">></button>
         </div>
         <div class="Product">
-            <h1>
+            <h2>
                 Buros
-            </h1>
+            </h2>
             <p>
                 Buros; hechos de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
-            <h2>contactanos</h2>
             <div class="Redes">
                 <div class="whats">
                 <button class="wats">contactar por whatsApp</button>
@@ -32,6 +33,7 @@
                 <div class="instag">
                 <button class="insta">Ver nuestro instagram</button>
                 </div>
+                <h2>contactanos</h2>
             </div>
         </div>
 
