--- a/producto4.html
+++ b/producto4.html
@@ -11,6 +11,10 @@
 </head>
 <body>
     <div class="Main">
+        <div class="header">
+            <button class="home" id="home"><img src="./Resources/icons/icons8-back-50.png" alt=""></button>
+            <h1>Mesa de dos tablones</h1>
+        </div>
         <div class="carrusel">
             <img src="./Resources/MESA DE DOS TABLONES/M2TP.JPG" alt="" class="img1 activa">
             <img src="./Resources/MESA DE DOS TABLONES/M2T2.JPG" alt="" class="img2">
@@ -18,8 +22,6 @@
             <img src="./Resources/MESA DE DOS TABLONES/M2T4.JPG" alt="" class="img4">
             <img src="./Resources/MESA DE DOS TABLONES/M2T5.JPG" alt="" class="img5">
             <img src="./Resources/MESA DE DOS TABLONES/M2T6.JPG" alt="" class="img6">
-            <button class="anterior"><</button>
-            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
@@ -28,7 +30,6 @@
             <p>
                 Una mesa para comedor rústica, de dos tablones. Puede ser producida para 4, 6, 8, o más pax; hechas de la madera preciosa Algarrobo, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
-            <h2>contactanos</h2>
             <div class="Redes">
                 <div class="whats">
                 <button class="wats">contactar por whatsApp</button>
@@ -36,6 +37,7 @@
                 <div class="instag">
                 <button class="insta">Ver nuestro instagram</button>
                 </div>
+                <h2>contactanos</h2>
             </div>
         </div>
 
