--- a/producto9.html
+++ b/producto9.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <div class="Main">
+        <div class="header">
+            <button class="home" id="home"><img src="./Resources/icons/icons8-back-50.png" alt=""></button>
+            <h1>Camas</h1>
+        </div>
         <div class="carrusel">
             <img src="./Resources/CAMAS/CP.jpg" alt="" class="img1 activa">
-            <img src="./Resources/CAMAS/A7304187.JPG" alt="" class="img2">
-            <img src="./Resources/CAMAS/20211210_110750.jpg" alt="" class="img3">
             <img src="./Resources/CAMAS/Cama-King-sizeP.jpg" alt="" class="img4">
-            <button class="anterior"><</button>
-            <button class="siguiente">></button>
         </div>
         <div class="Product">
             <h1>
@@ -26,7 +26,6 @@
             <p>
                 Camas hechas en varios tamaños; Camera, Queen o King; hechas de maderas preciosas a utilizar en dependencia de la disponibilidad: Cedro, Cedro mara, Caoba, Algarrobo, Pino, Teca o Haya, personalizable, para mas informacion contactar a uno de nuestros comerciales
             </p>
-            <h2>contactanos</h2>
             <div class="Redes">
                 <div class="whats">
                 <button class="wats">contactar por whatsApp</button>
@@ -34,6 +33,7 @@
                 <div class="instag">
                 <button class="insta">Ver nuestro instagram</button>
                 </div>
+                <h2>contactanos</h2>
             </div>
         </div>
 
