--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <script src="./Js/index.js"></script>
 </head>
 <body>
+    <!-- Loader -->
+<div id="loader" class="loader">
+  <div class="spinner"></div>
+</div>
     <Div class="Main--Container">
         <header>
             <H1>
