--- a/index.html
+++ b/index.html
@@ -122,5 +122,14 @@
         </footer>
     </Div>
     </Div>
+    <script>
+  window.addEventListener('load', () => {
+    const loader = document.getElementById('loader');
+    loader.style.opacity = '0';
+    loader.style.pointerEvents = 'none';
+    setTimeout(() => loader.remove(), 500); // opcional: eliminarlo del DOM después
+  });
+</script>
+
 </body>
 </html>
