--- a/index.html
+++ b/index.html
@@ -134,12 +134,23 @@
     </Div>
     <script>
   window.addEventListener('load', () => {
+    hideLoader(); // si la página carga completamente antes de 10s
+  });
+
+  // Garantiza que se oculta el loader después de 10 segundos sí o sí
+  setTimeout(() => {
+    hideLoader(); // fuerza ocultar después de 10s
+  }, 10000);
+
+  function hideLoader() {
     const loader = document.getElementById('loader');
+    if (!loader) return; // por si ya fue eliminado
     loader.style.opacity = '0';
     loader.style.pointerEvents = 'none';
-    setTimeout(() => loader.remove(), 500); // opcional: eliminarlo del DOM después
-  });
+    setTimeout(() => loader.remove(), 500); // opcional
+  }
 </script>
+
 
 </body>
 </html>
